--- a/src/app/modules/kepcoin/kepcoin.component.html
+++ b/src/app/modules/kepcoin/kepcoin.component.html
@@ -18,14 +18,14 @@
           <strong>
             {{ streak }}
           </strong>
-          <span class="badge me-50 ms-50 bg-warning badge-glow">{{ 'YouHave' | translate }}
-            <strong>{{ streakFreeze }}</strong></span>
+          <span class="badge me-50 ms-50 bg-warning badge-glow">
+            {{ 'YouHave' | translate }} <strong>{{ streakFreeze }}</strong>
+          </span>
           <kepcoin-spend-swal
             [value]="10"
             [purchaseUrl]="'purchase-streak-freeze'"
             (success)="success()"
-          >
-          </kepcoin-spend-swal>
+          ></kepcoin-spend-swal>
         </div>
       </div>
 
@@ -80,46 +80,44 @@
                         @switch (earn.earnType) {
                           @case (4) {
                             <span>
-                              Admindan bonus
+                              {{ 'BonusFromAdmin' | translate }}
                             </span>
                           }
                           @case (5) {
                             <span>
-                              Kunlik faollik: <u class="text-primary">{{ earn.detail.date }}</u>
+                              {{ 'DailyActivity' | translate }} <u class="text-primary">{{ earn.detail.date }}</u>
                             </span>
                           }
                           @case (6) {
                             <span>
-                              Kunlik topshiriq bajarildi: <u class="text-primary">{{ earn.detail.description }}</u>
+                              {{ 'DailyTaskCompleted' | translate }} <u class="text-primary">{{ earn.detail.description }}</u>
                             </span>
                           }
                           @case (7) {
                             <span>
-                              Kunlik masalalar reytingi g'olibi: <u class="text-primary">{{ earn.detail.date }}</u>
+                              {{ 'DailyRatingWinner' | translate }} <u class="text-primary">{{ earn.detail.date }}</u>
                             </span>
                           }
                           @case (8) {
                             <span>
-                              Haftalik masalalar reytingi g'olibi: <u class="text-primary">{{ earn.detail.date }}</u>
+                              {{ 'WeeklyRatingWinner' | translate }} <u class="text-primary">{{ earn.detail.date }}</u>
                             </span>
                           }
                           @case (9) {
                             <span>
-                              Oylik masalalar reytingi g'olibi: <u class="text-primary">{{ earn.detail.date }}</u>
+                              {{ 'MonthlyRatingWinner' | translate }} <u class="text-primary">{{ earn.detail.date }}</u>
                             </span>
                           }
                           @case (10) {
                             <span>
-                              Kontest ishtirokchisi: <a
-                              [routerLink]="['/competitions', 'contests', 'contest', earn.detail.contest.id]">
+                              {{ 'ContestParticipant' | translate }} <a [routerLink]="['/competitions', 'contests', 'contest', earn.detail.contest.id]">
                               <u class="text-primary">{{ earn.detail.contest.title }}</u>
                             </a>
                             </span>
                           }
                           @case (11) {
                             <span>
-                              Arena ishtirokchisi: <a
-                              [routerLink]="['/competitions', 'arena', 'tournament', earn.detail.arena.id]">
+                              {{ 'ArenaParticipant' | translate }} <a [routerLink]="['/competitions', 'arena', 'tournament', earn.detail.arena.id]">
                               <u class="text-primary">{{ earn.detail.arena.title }}</u>
                             </a>
                             </span>
@@ -127,8 +125,7 @@
                         }
                       </span>
                     </p>
-                    <div class="d-flex align-items-center">
-                    </div>
+                    <div class="d-flex align-items-center"></div>
                   </div>
                 </li>
               }
@@ -154,52 +151,47 @@
                         @switch (spend.type) {
                           @case (1) {
                             <span>
-                              Urinishni ko'rish <a class="text-primary"
-                                                   routerLink="/practice/problems/attempts/{{ spend.detail.attemptId }}">
+                              {{ 'ViewAttempt' | translate }} <a class="text-primary" routerLink="/practice/problems/attempts/{{ spend.detail.attemptId }}">
                               <u>{{ spend.detail.attemptId }}</u>
                             </a>
                             </span>
                           }
                           @case (2) {
                             <span>
-                              Urinish testini ko'rish <a class="text-primary"
-                                                         routerLink="/practice/problems/attempts/{{ spend.detail.attemptId }}">
+                              {{ 'ViewTestAttempt' | translate }} <a class="text-primary" routerLink="/practice/problems/attempts/{{ spend.detail.attemptId }}">
                               <u>{{ spend.detail.attemptId }}</u>
                             </a>
                             </span>
                           }
                           @case (3) {
                             <span>
-                              Masala yechimini ko'rish <a class="text-primary"
-                                                          routerLink="/practice/problems/problem/{{ spend.detail.problemId }}">
+                              {{ 'ViewProblemSolution' | translate }} <a class="text-primary" routerLink="/practice/problems/problem/{{ spend.detail.problemId }}">
                               <u>{{ spend.detail.problemId }}. {{ spend.detail.problemTitle }}</u>
                             </a>
                             </span>
                           }
                           @case (5) {
                             <span>
-                              Rasmni o'zgartirish
+                              {{ 'ChangeImage' | translate }}
                               <img src="{{ spend.detail.coverPhoto }}" style="width: 100%;">
                             </span>
                           }
                           @case (10) {
                             <span>
-                              Testdan o'tish <a class="text-primary"
-                                                routerLink="/practice/tests/test/{{ spend.detail.test.id }}">
+                              {{ 'PassTest' | translate }} <a class="text-primary" routerLink="/practice/tests/test/{{ spend.detail.test.id }}">
                               <u>{{ spend.detail.test.title }}</u>
                             </a>
                             </span>
                           }
                           @case (11) {
                             <span>
-                              Kontest yaratish
+                              {{ 'CreateContest' | translate }}
                             </span>
                           }
                         }
                       </span>
                     </p>
-                    <div class="d-flex align-items-center">
-                    </div>
+                    <div class="d-flex align-items-center"></div>
                   </div>
                 </li>
               }
@@ -226,44 +218,42 @@
       <div class="card-header">
         <div class="card-title">
           <i data-feather="dollar-sign"></i>
-          Kepcoin qanday topsa bo'ladi?
+          {{ 'HowToEarnKepcoin' | translate }}
         </div>
       </div>
 
       <div class="card-body text-dark">
-        Ushbu valyutaga ega bo'lish uchun tizim rivojlanishiga o'z xissangizni qo'shingingiz lozim. Jumladan kepcoin:
+        {{ 'EarnDescription' | translate }}
 
         <div class="earn">
           <kepcoin [value]="1"></kepcoin>
-          : Kunlik faollik uchun
+          : {{ 'EarnItem1' | translate }}
         </div>
 
         <div class="earn">
           <kepcoin [value]="'1-10'"></kepcoin>
-          : Kunlik topshiriqlarni bajarganligi uchun
+          : {{ 'EarnItem2' | translate }}
         </div>
 
         <div class="earn">
           <kepcoin [value]="'3, 10, 50'"></kepcoin>
-          : Mos ravishda kunlik, haftalik va oylik masalalar reytingi g'olibi
-          uchun
+          : {{ 'EarnItem3' | translate }}
         </div>
 
         <div class="earn">
           <kepcoin [value]="'5+'"></kepcoin>
-          : Musobaqada qatnashganligi uchun
+          : {{ 'EarnItem4' | translate }}
         </div>
 
         <div class="earn">
           <kepcoin [value]="'10-100'"></kepcoin>
-          : Blog yozish
+          : {{ 'EarnItem5' | translate }}
         </div>
 
         <div class="earn">
           <kepcoin [value]="'1-50'"></kepcoin>
-          : Masalalarni tahrirlashda yordamlashish(yechim yozish, tarjima, teglar qo'shish, o'xhash masalalar topish)
+          : {{ 'EarnItem6' | translate }}
         </div>
-
       </div>
     </kep-card>
 
@@ -271,57 +261,56 @@
       <div class="card-header">
         <div class="card-title">
           <i data-feather="coffee"></i>
-          Kepcoin qanday sarflasa bo'ladi?
+          {{ 'HowToSpendKepcoin' | translate }}
         </div>
       </div>
 
       <div class="card-body text-dark">
         <div class="spend">
           <kepcoin [value]="'0-14'"></kepcoin>
-          : Boshqa foydalanuvchi urinishini ko'rish
+          : {{ 'SpendItem1' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="1"></kepcoin>
-          : Yechim yiqilgan testni ko'rish
+          : {{ 'SpendItem2' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="'2-50'"></kepcoin>
-          : Masala yechimini xarid qilish
+          : {{ 'SpendItem3' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="5"></kepcoin>
-          : Profil orqa rasmini o'zgartirish
+          : {{ 'SpendItem4' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="1"></kepcoin>
-          : Testdan o'tish
+          : {{ 'SpendItem5' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="'1-1000'"></kepcoin>
-          : Kurs sotib olish
+          : {{ 'SpendItem6' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="'50'"></kepcoin>
-          : Kodni tahrirlashda testlash funksiyasi(butunlayga)
+          : {{ 'SpendItem7' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="25"></kepcoin>
-          : Kontestda ikki barobar reyting o'zgarishi(manfiy bo'lsa ham ikki barobar bo'lib o'zgaradi)
+          : {{ 'SpendItem8' | translate }}
         </div>
 
         <div class="spend">
           <kepcoin [value]="25"></kepcoin>
-          : Kontestda reytingni saqlab qolish(agar manfiy bo'lsa berilmaydi)
+          : {{ 'SpendItem9' | translate }}
         </div>
       </div>
     </kep-card>
-
   </div>
 </div>
