--- a/src/app/shared/components/user-popover/user-popover/user-popover.component.scss
+++ b/src/app/shared/components/user-popover/user-popover/user-popover.component.scss
@@ -1,53 +1,20 @@
 @import 'styles/kep-imports';
 
-::ng-deep .user-popover .popover-body {
-  padding: 0px !important;
-  width: 400px !important;
-  @include dark-layout {
-    box-shadow: none !important;
-    border: none !important;
-    background-color: $theme-dark-body-bg;
+.user-popover {
+  background: initial;
 
-    .card {
-      background-color: $theme-dark-body-bg;
-      box-shadow: none !important;
-      border: none !important;
+  .card {
+    margin-bottom: 0;
+
+    .card-body {
+      background-color: $primary-01;
     }
   }
-  //@include media-breakpoint-down(sm){
-  //  width: 320px !important;
-  //  // zoom: 80% !important;
-  //  .card-body {
-  //    padding-right: 1rem !important;
-  //    padding-left: 1rem !important;
-  //    padding-bottom: 1rem !important;
-  //  }
-  //}
-}
 
-::ng-deep .user-popover .card {
-  margin-bottom: 0px !important;
-  box-shadow: 0 4px 6px 0 rgb(85 85 85 / 9%), 0 1px 20px 0 rgb(0 0 0 / 8%), 0px 1px 11px 0px rgb(0 0 0 / 6%) !important;
-}
-
-::ng-deep .user-popover .rating-title-img {
-  width: 24px !important;
-  height: 24px !important;
-  padding: 0px !important;
-  margin: 0px !important;
-  margin-right: 2px !important;
-  margin-bottom: 3px !important;
-}
-
-.badge-pill {
-  margin-right: 6px;
-  width: 30px;
-  height: 23px;
-  white-space: nowrap;
-  font-weight: 600 !important;
-  font-size: 10px !important;
-}
-
-a {
-  font-weight: 500;
+  .popover-body {
+    padding: 0px !important;
+    width: 400px !important;
+    box-shadow: none !important;
+    border: none !important;
+  }
 }
