--- a/src/app/shared/components/table/ix-table/ix-table.component.html
+++ b/src/app/shared/components/table/ix-table/ix-table.component.html
@@ -8,7 +8,10 @@
           [class.cursor-pointer]="column.sortable"
           [style.text-align]="column.align"
         >
-          <div class="d-flex align-items-center">
+          <div
+            [class.justify-content-center]="column.align === 'center'"
+            class="d-flex align-items-center"
+          >
             <kep-icon *ngIf="column.icon" [name]="column.icon"/>
             <div class="header-title">{{ column.header | translate }}</div>
             @if (column.sortable) {
