--- a/src/app/modules/hackathons/ui/components/hackathon-card/hackathon-card.component.html
+++ b/src/app/modules/hackathons/ui/components/hackathon-card/hackathon-card.component.html
@@ -8,7 +8,7 @@
         <h2 class="text-dark">{{ hackathon.title }}</h2>
       </div>
 
-      <project-technology name="Angular"/>
+      <project-technology [name]="['Angular'][hackathon.id-1]"/>
     </div>
 
     <div class="card-body p-4">
