--- a/src/app/modules/projects/ui/components/project-technology/project-technology.component.scss
+++ b/src/app/modules/projects/ui/components/project-technology/project-technology.component.scss
@@ -73,7 +73,7 @@
 }
 
 .technology-Text {
-  background: linear-gradient(45deg, #d1d5d8, #fafbfc);
+  background: linear-gradient(45deg, #d1d5d8, #d1d5d8);
 
   @include dark-layout {
     background: linear-gradient(45deg, #7a7d7f, #a1a3a5);
