--- a/src/app/modules/problems/pages/problems/problems.component.scss
+++ b/src/app/modules/problems/pages/problems/problems.component.scss
@@ -1,1 +1,49 @@
 @import 'styles/kep-imports';
+
+.problems-page {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+
+  &__layout {
+    display: grid;
+    gap: 1.5rem;
+    grid-template-columns: minmax(0, 1fr);
+
+    @include media-breakpoint-up(xl) {
+      grid-template-columns: minmax(0, 1.8fr) minmax(280px, 1fr);
+      align-items: start;
+    }
+  }
+
+  &__main {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  &__sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  &__card {
+    width: 100%;
+  }
+
+  &__additional {
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+
+    @include media-breakpoint-up(xl) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+
+  &__additional-card,
+  &__categories {
+    width: 100%;
+  }
+}
